# ampliclust

./: AMPLICLUST_README.md  Cargo.toml  DEVELOPMENT_CHECKLIST.md  EXAMPLES.md  IMPLEMENTATION_GUIDE.md  PHASE1_COMPLETE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  rust_amplicon_cluster_design.md
docs/: ARCHITECTURE_DIAGRAMS.md  CLUSTERING_ENHANCEMENTS.md  DEVELOPMENT_CHECKLIST.md  INDEX.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASES_1_2_3_4_COMPLETE.md  PHASES_1_2_3_COMPLETE.md  PHASE_1_2_TESTING.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  REAL_DATA_TEST_CHECKLIST.md  START_HERE_TESTING.md  TESTING_GUIDE.md
examples/: generate_test_data.py  phase1_demo.rs
src/: config.rs  lib.rs  main.rs  stubs.rs
src/alignment/: edlib.rs  kmer.rs  minimap.rs  mod.rs  placement.rs
src/clustering/: dbscan.rs  denovo.rs  hierarchical.rs  kmeans.rs  mod.rs  reference_guided.rs
src/consensus/: mod.rs  poa.rs  polish.rs  quality.rs  simple.rs  spoa_wrapper.rs
src/io/: bam.rs  fasta.rs  fastq.rs  formats.rs  mod.rs
src/metrics/: chimera.rs  cluster_stats.rs  diversity.rs  mod.rs  quality_control.rs
src/reads/: filtering.rs  mod.rs  platform.rs  quality.rs  sequence.rs
src/utils/: logging.rs  math.rs  mod.rs  parallel.rs
src/variants/: detection.rs  filtering.rs  graph.rs  mod.rs
tests/: run_tests.sh
tests/results/: feature_test_cluster_0_Allele_B_01_150_reads.fasta  feature_test_cluster_1_Allele_B_02_50_reads.fasta  feature_test_cluster_4_Allele_A_03_100_reads.fasta  feature_test_clusters.txt  feature_test_consensus.fasta  feature_test_read_clusters.txt  freq_test_cluster_1_Allele_A_01_400_reads.fasta  freq_test_cluster_2_Allele_A_02_300_reads.fasta  freq_test_clusters.txt  freq_test_consensus.fasta  freq_test_read_clusters.txt  test1_basic_cluster_0_Allele_A_03_100_reads.fasta  test1_basic_clusters.txt  (+61 more)
(+6 files in other folders)
